objects/ASI_TnE_ClaimHeader__c.object
<CustomObject>
    <fields>
        <fullName>ASI_JP_TnE_Accounting_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accounting Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_3rd_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3rd Party T&amp;E (Invoice)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_AP_Sync__c</fullName>
        <label>AP Sync</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Address_Number__c</fullName>
        <formula>IF(
   OR(
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_SG&quot;),
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_PH&quot;),
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_ID&quot;),
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_TH&quot;),
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_MY&quot;),
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_HK&quot;),
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_TW&quot;)
   ),
   IF(
      NOT(ISBLANK(ASI_TnE_Payee_Supplier__c)),
      ASI_TnE_Payee_Supplier__r.ASI_MFM_Customer_Supplier_Number__c,
      IF(
         NOT(ISBLANK(ASI_TnE_Payee_Employee__c)),
         ASI_TnE_Payee_Employee__r.ASI_TnE_Sub_Ledger__c,
         Owner:User.ASI_TnE_Sub_Ledger__c
      )
   ),
   Owner:User.ASI_TnE_Sub_Ledger__c
)</formula>
        <label>Address Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Airline_Total__c</fullName>
        <label>Airline Total</label>
        <summarizedField>ASI_TnE_ClaimDetail__c.ASI_TnE_Airline__c</summarizedField>
        <summaryForeignKey>ASI_TnE_ClaimDetail__c.ASI_TnE_ClaimHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Travel_Entertainment_Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Travel_Entertainment_Claims1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Approver3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Travel_Entertainment_Claims2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Auto_Exp_Total__c</fullName>
        <label>Auto Exp Total</label>
        <summarizedField>ASI_TnE_ClaimDetail__c.ASI_TnE_Auto__c</summarizedField>
        <summaryForeignKey>ASI_TnE_ClaimDetail__c.ASI_TnE_ClaimHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Business_Trip_Ent_Total__c</fullName>
        <label>Business Trip Entertainment Total</label>
        <summarizedField>ASI_TnE_ClaimDetail__c.ASI_TnE_Business_Trip_Entertainment__c</summarizedField>
        <summaryForeignKey>ASI_TnE_ClaimDetail__c.ASI_TnE_ClaimHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Business_Unit__c</fullName>
        <formula>IF( NOT( ISBLANK( ASI_TnE_Charger__c ) ) ,  ASI_TnE_Charger__r.ASI_TnE_Department_Code__c , IF( NOT( ISBLANK(  ASI_TnE_Payee_Employee__c  ) ) ,   ASI_TnE_Payee_Employee__r.ASI_TnE_Department_Code__c  , Owner:User.ASI_TnE_Department_Code__c  ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Cash_Advance_Deduction__c</fullName>
        <label>Cash Advance Deduction (if any)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Cash_Advance_Pre_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Advance Pre-Approval</label>
        <referenceTo>ASI_TnE_Cash_Advance_Pre_Approval__c</referenceTo>
        <relationshipLabel>Travel &amp; Entertainment Claims</relationshipLabel>
        <relationshipName>Travel_Entertainment_Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Cash_Advance_Type__c</fullName>
        <label>Cash Advance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General Cash Advance</fullName>
                </value>
                <value>
                    <fullName>Trip Cash Advance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Charger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charger</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Travel_Entertainment_Claims4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Checker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checker</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Travel_Entertainment_ClaimshMMO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Claim_Detail_Count__c</fullName>
        <label>Detail Count</label>
        <summaryForeignKey>ASI_TnE_ClaimDetail__c.ASI_TnE_ClaimHeader__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Claim_ID__c</fullName>
        <label>T&amp;E Claim ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Claims_Count_Without_Receipts__c</fullName>
        <label>Claims Count Without Receipts</label>
        <summaryFilterItems>
            <field>ASI_TnE_ClaimDetail__c.ASI_TnE_With_Receipt__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_TnE_ClaimDetail__c.ASI_TnE_ClaimHeader__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Claims_Value_Without_Receipts__c</fullName>
        <label>Claims Value Without Receipts</label>
        <summarizedField>ASI_TnE_ClaimDetail__c.ASI_TnE_HK_Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_TnE_ClaimDetail__c.ASI_TnE_With_Receipt__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_TnE_ClaimDetail__c.ASI_TnE_ClaimHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Company_Code__c</fullName>
        <formula>&quot;00&quot; +  LEFT( ASI_TnE_Business_Unit__c , 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Company__c</fullName>
        <formula>IF(
	OR(
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_SG&quot;),
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_PH&quot;),
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_ID&quot;),
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_TH&quot;),
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_MY&quot;),
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_HK&quot;),
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_TW&quot;)
	),
   
	IF(ISBLANK(ASI_TnE_Payee_Employee__c), 
		Owner:User.ASI_Company_Name__c, 
			ASI_TnE_Payee_Employee__r.ASI_Company_Name__c)
	,
			
	IF(ISBLANK(Owner:User.ASI_Company_Name__c),
		Owner:User.CompanyName,
			Owner:User.ASI_Company_Name__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Cover_Period_From__c</fullName>
        <formula>ASI_TnE_Due_Date_Mapping__r.ASI_JP_TnE_Period_From__c</formula>
        <label>Cover Period From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Cover_Period_To__c</fullName>
        <formula>ASI_TnE_Due_Date_Mapping__r.ASI_JP_TnE_Period_To__c</formula>
        <label>Cover Period To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>IDR</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>KHR</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>MMK</fullName>
                </value>
                <value>
                    <fullName>MYR</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>THB</fullName>
                </value>
                <value>
                    <fullName>TWD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>VND</fullName>
                    <default>true</default>
                    <label>VND</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Days_Overdue__c</fullName>
        <label>No of Days Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Department_Category_Code__c</fullName>
        <formula>Text(Owner:User.ASI_JP_TnE_Department_Category_Code__c)</formula>
        <label>Department Category Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Department_Division__c</fullName>
        <formula>IF(
	OR(
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_SG&quot;),
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_PH&quot;),
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_ID&quot;),
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_TH&quot;),
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_MY&quot;),
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_HK&quot;),
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_TW&quot;)
	),
   
	IF(ISBLANK(ASI_TnE_Payee_Employee__c), 
		Owner:User.ASI_Department__c, 
			ASI_TnE_Payee_Employee__r.ASI_Department__c)
	,
			
	IF(ISBLANK(Owner:User.ASI_Department__c),
		Owner:User.Department,
			Owner:User.ASI_Department__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department/Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Document_No_Suffix__c</fullName>
        <description>Document No</description>
        <label>Document No. Suffix</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_TnE_Document_No__c</fullName>
        <formula>&quot;9&quot; + ASI_TnE_Document_No_Suffix__c</formula>
        <label>Document No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Document_Type__c</fullName>
        <formula>IF( ISPICKVAL( ASI_TnE_Payment_Option__c , &quot;Cash&quot;) || ISPICKVAL( ASI_TnE_Payment_Option__c , &quot;DC Card&quot;), &quot;P4&quot;, &quot;P0&quot;)</formula>
        <label>Document Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Due_Date_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Due Date Mapping</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_JP_TnE_Due_Date_Mapping__c.ASI_JP_TnE_Valid_Period__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.ASI_TnE_Payment_Option__c</field>
                <operation>equals</operation>
                <valueField>ASI_JP_TnE_Due_Date_Mapping__c.ASI_JP_TnE_Payment_Option__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ASI_JP_TnE_Due_Date_Mapping__c</referenceTo>
        <relationshipLabel>Travel &amp; Entertainment Claims (Due Date Mapping)</relationshipLabel>
        <relationshipName>Travel_Entertainment_Claims1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Employee_Type__c</fullName>
        <formula>IF(
   OR(
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_SG&quot;),
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_PH&quot;),
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_ID&quot;),
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_TH&quot;),
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_MY&quot;),
      CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_HK&quot;)
   ),
   IF(ISBLANK(ASI_TnE_Payee_Employee__c), Owner:User.ASI_TnE_Employee_Type__c, ASI_TnE_Payee_Employee__r.ASI_TnE_Employee_Type__c),
   &quot;&quot;
)</formula>
        <label>Employee Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Exchange_Rate_Source__c</fullName>
        <label>Exchange Rate Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Expense_Report_Total__c</fullName>
        <label>Expense Report Total</label>
        <summarizedField>ASI_TnE_ClaimDetail__c.ASI_TnE_Total_Expense__c</summarizedField>
        <summaryForeignKey>ASI_TnE_ClaimDetail__c.ASI_TnE_ClaimHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Explanation__c</fullName>
        <label>Explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Export_to_AP_Voucher_GL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Export to AP Voucher/GL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_FX_Rate__c</fullName>
        <label>FX Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Finance_Checking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Checking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Finance_Remarks__c</fullName>
        <label>Finance Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Finance_Verified_By__c</fullName>
        <label>Finance Processed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Finance_Verify_Date__c</fullName>
        <label>Finance Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_First_Approval_By__c</fullName>
        <label>First Approval By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_First_Approval_Date__c</fullName>
        <label>First Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Fourth_Approval_By__c</fullName>
        <label>Fourth Approval By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Fourth_Approval_Date__c</fullName>
        <label>Fourth Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_HK_Days_Overdue__c</fullName>
        <formula>ASI_TnE_HK_Today__c - ASI_TnE_HK_Start_Date_after_3_Monthes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_HK_Paid_Amount_Raw__c</fullName>
        <label>T&amp;E Paid Amount (Raw)</label>
        <summarizedField>ASI_TnE_ClaimDetail__c.ASI_TnE_HK_Paid_Amount_Raw__c</summarizedField>
        <summaryForeignKey>ASI_TnE_ClaimDetail__c.ASI_TnE_ClaimHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_HK_Paid_Amount__c</fullName>
        <label>T&amp;E Paid Amount (New)</label>
        <summarizedField>ASI_TnE_ClaimDetail__c.ASI_TnE_HK_Paid_Amount__c</summarizedField>
        <summaryForeignKey>ASI_TnE_ClaimDetail__c.ASI_TnE_ClaimHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_HK_Start_Date_after_3_Monthes__c</fullName>
        <formula>DATE(
  YEAR( ASI_TnE_Start_Date__c ) + FLOOR( ( MONTH ( ASI_TnE_Start_Date__c ) + 3 - 1 ) / 12 ),
  MOD( MONTH ( ASI_TnE_Start_Date__c ) + 3 - 1 + 
    IF( DAY ( ASI_TnE_Start_Date__c ) &gt; CASE( MOD( MONTH( ASI_TnE_Start_Date__c ) + 3 - 1, 12 ) + 1, 
      2, 28,
      4, 30,
      6, 30,
      9, 30, 
      11, 30,
      31 ), 1, 0 ), 12 ) + 1,
    IF( DAY( ASI_TnE_Start_Date__c ) &gt; CASE( MOD( MONTH( ASI_TnE_Start_Date__c ) + 3 - 1, 12 ) + 1,
      2, 28, 
      4, 30, 
      6, 30, 
      9, 30, 
      11, 30, 
      31 ), 
    1, DAY( ASI_TnE_Start_Date__c )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date after 3 Monthes</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_HK_Submission_Date__c</fullName>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_HK_Today__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Hotel_Total__c</fullName>
        <label>Hotel Total</label>
        <summarizedField>ASI_TnE_ClaimDetail__c.ASI_TnE_Hotel__c</summarizedField>
        <summaryForeignKey>ASI_TnE_ClaimDetail__c.ASI_TnE_ClaimHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Incidental_Others_Total__c</fullName>
        <label>Others Total</label>
        <summarizedField>ASI_TnE_ClaimDetail__c.ASI_TnE_Incidental__c</summarizedField>
        <summaryForeignKey>ASI_TnE_ClaimDetail__c.ASI_TnE_ClaimHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Invoice_No__c</fullName>
        <label>Invoice No.</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Is_Marketing_User__c</fullName>
        <formula>If( CONTAINS(Owner:User.Department, &apos;Marketing&apos;)  ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Marketing User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_JDE_Document_No__c</fullName>
        <label>JDE Document No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_JDE_Document_Type__c</fullName>
        <label>JDE Document Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_JP_Marketing_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JP Marketing User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_JP_Supplier_Number__c</fullName>
        <formula>ASI_TnE_Payee__r.ASI_MFM_Customer_Supplier_Number__c</formula>
        <label>JP Supplier Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Additional_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>[Trade MKT]
* 1st: Core-Metro-Pull: 석상윤, Outer-Metro-Pull: 남태안, Metro WS: 문석영, Central: 양복규, Youngnam: 강진철, Off: 홍두원
* 2nd: Metro-Pull, Outer-Metro-Pull, Off : 유여경 / Metro WS, Central, Youngnam : 윤선우
[Brand MKT]
* 해당 브랜드 담당자로 승인자 한명 지정</inlineHelpText>
        <label>A&amp;P approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Travel_Entertainment_ClaimsFEDi</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Additional_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A&amp;P approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Travel_Entertainment_ClaimsFEDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Additional_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A&amp;P approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Travel_Entertainment_ClaimsFEE7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Budget_Owner_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>다른 사람의 T&amp;E 예산을 사용하는 경우, 선택된 budget owner가 승인권자로 자동 지정됩니다.</inlineHelpText>
        <label>Budget Owner 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Travel_Entertainment_ClaimsHDua</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Budget_Owner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Owner 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Travel_Entertainment_ClaimsHDvs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Budget_Owner_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Owner 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Travel_Entertainment_ClaimsHDw7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_CoApprover_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>T&amp;E/A&amp;P외 기타비용 집행시 각 예산 담당자가 해당 비용의 승인권자로 자동 지정 됩니다.
(ex: 지점 비품-&gt;총무팀 담당자 / 교육훈련비-&gt;인사팀 담당자)</inlineHelpText>
        <label>Co-Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Travel_Entertainment_ClaimsHAXO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_CoApprover_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Travel_Entertainment_ClaimsHAXY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_CoApprover_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Travel_Entertainment_ClaimsHAXi</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Company__c</fullName>
        <label>Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Credit_Card_No__c</fullName>
        <inlineHelpText>법인카드 사용의 정산은 &quot;사용월&quot;기준이 아니라 &quot;카드번호&quot; 기준입니다.
분실 &amp; 갱신으로 인해 카드가 재발급 된 경우, 같은 월에 재발급 전/후 각각의 카드 번호에 대한 두 번의 정산서 작성이 필요합니다.</inlineHelpText>
        <label>Credit Card No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Department__c</fullName>
        <label>Department</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Employee_ID__c</fullName>
        <formula>ASI_TnE_KR_Payee__r.ASI_KOR_Commission_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_External_ID__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_GL_Date__c</fullName>
        <defaultValue>IF(
CONTAINS($RecordType.DeveloperName, &quot;ASI_TnE_TW&quot;),
null,
IF(DAY(TODAY())&gt;23,      IF(MONTH(TODAY())==12,DATE(YEAR(TODAY())+1, 1, 23),DATE(YEAR(TODAY()), MONTH(TODAY())+1, 23)),DATE(YEAR(TODAY()), MONTH(TODAY()), 23))
)</defaultValue>
        <label>G/L Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Help_Text__c</fullName>
        <defaultValue>&quot;T&amp;E Tip)&quot;&amp;BR()&amp; 
&quot;영업에서 법인카드로 A&amp;P 집행시, A&amp;P의 성격에 따라 적절한 마케팅 승인권자를 직접 지정해야 합니다.&quot; &amp;BR()&amp; 
&quot;미지정시 오류로 정산서 작성 진행이 되지 않습니다.&quot; &amp;BR()&amp; BR()&amp;
&quot;A&amp;P Tip)&quot; &amp;BR()&amp;
&quot;[Trade MKT]&quot; &amp;BR()&amp; 
&quot;A&amp;P 승인자 두명 지정&quot; &amp;BR()&amp;
&quot; * 1st approver : 권역담당자 (Metro Pull : 석상윤 / Metro WS : 이상훈 / Central, Youngnam: 강진철/ Off Trade : 변영민)&quot; &amp;BR()&amp; 
&quot; * 2nd approver : 윤선우&quot; &amp;BR()&amp; 
&quot;[Brand MKT]&quot; &amp;BR()&amp; 
&quot; * 해당 브랜드 담당자로 승인자 한명 지정&quot;</defaultValue>
        <label>Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Is_Custom_Submit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Custom Submit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Line_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Travel_Entertainment_ClaimsHE2K</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_LookupTnE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LookupTnE</label>
        <referenceTo>ASI_TnE_ClaimHeader__c</referenceTo>
        <relationshipLabel>AnPLookupTnE</relationshipLabel>
        <relationshipName>ASI_TnE_KR_AnPLookupTnE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Month__c</fullName>
        <inlineHelpText>cash claim의 경우 3개월 이내의 영수증만 처리 가능합니다.</inlineHelpText>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Over_Budget__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <inlineHelpText>다음과 같은 경우 &quot;YES&quot;가 표시되며 이 경우 Line manager는 Over budget에 대한 소명을 받은 후 승인해야 합니다.
(정산서 작성일 직전월까지의) 승인 완료된 T&amp;E 사용액+미정산 법인카드 금액+현금사용액 &gt; 본인 T&amp;E 예산</inlineHelpText>
        <label>Over Budget?</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Payee_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Travel_Entertainment_Claims_kr2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Payee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Payee</description>
        <inlineHelpText>T&amp;E Tip)
다음의 경우 owner와 payee가 다르게 표시됩니다.
-지점 A&amp;P카드의 정산자로 지정된 경우 payee는 카드 명의자인 지점장
-임원에게 정산서 작성 권한을 위임받은 PA의 경우 payee는 임원명
A&amp;P Tip)
A&amp;P 법인카드 명의자</inlineHelpText>
        <label>Payee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Travel_Entertainment_Claims_kr1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_TimeRecord__c</fullName>
        <label>Time Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_TotalAmount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>ASI_TnE_ClaimDetail__c.ASI_TnE_KR_AmountKRW__c</summarizedField>
        <summaryForeignKey>ASI_TnE_ClaimDetail__c.ASI_TnE_ClaimHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Unsettled_Amount__c</fullName>
        <label>Unsettled Amount(Last Month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_UpdateCount__c</fullName>
        <label>UpdateCount</label>
        <summarizedField>ASI_TnE_ClaimDetail__c.ASI_TnE_Receipt_Number__c</summarizedField>
        <summaryForeignKey>ASI_TnE_ClaimDetail__c.ASI_TnE_ClaimHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_YTD_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTD Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_YTD_Spending__c</fullName>
        <label>Actual Spending</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Latest_Approver__c</fullName>
        <label>Latest Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Local_Ent_Meeting_Total__c</fullName>
        <formula>ASI_TnE_Local_Entertainment_Total__c +  ASI_TnE_Meeting_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Entertainment &amp; Meeting Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>